# gfa_annotate

./: Cargo.toml  README.md
data/example_data/: test.bed  testGraph.gfa
scripts/: addIntergenic.py  attribute2node.py  gff2bed.py
src/: bed.rs  main.rs
tests/: integration_test.rs
