[package]
name = "gfa_annotate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfaR_wrapper = {git = "https://github.com/MoinSebi/gfaR_wrapper"}
clap = "=3.0.0-beta.4"
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
linked_hash_set = "0.1.4"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
